Closed Bug 839055 Opened 13 years ago Closed 13 years ago

H.264/AAC support: abort playback of resource if the video or audio stream is unplayable

Categories

(Core :: Audio/Video, defect)

21 Branch
x86_64
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla21

People

(Reporter: epinal99-bugzilla2, Assigned: cpearce)

References

()

Details

Attachments

(1 file)

STR: 1) Start the latest nightly with support of H.264/AAC in MP4 2) Open this trailer http://www.tools4movies.com/dvd_catalyst_profile_samples/Harold%20Kumar%203%20Christmas%20bionic%20fast.mp4 Result: audio but no video (Win 7). MediaInfo log: General Complete name : Harold Kumar 3 Christmas bionic fast.mp4 Format : MPEG-4 Format profile : Base Media Codec ID : isom File size : 20.3 MiB Duration : 2mn 28s Overall bit rate mode : Variable Overall bit rate : 1 143 Kbps Movie name : Harold Kumar 3 Christmas Writing application : Lavf52.103.0 Cover : Yes Video ID : 1 Format : MPEG-4 Visual Format profile : Simple@L1 Format settings, BVOP : No Format settings, QPel : No Format settings, GMC : No warppoints Format settings, Matrix : Default (H.263) Codec ID : 20 Duration : 2mn 28s Bit rate : 1 006 Kbps Width : 856 pixels Height : 368 pixels Display aspect ratio : 2.35:1 Frame rate mode : Constant Frame rate : 23.976 fps Color space : YUV Chroma subsampling : 4:2:0 Bit depth : 8 bits Scan type : Progressive Compression mode : Lossy Bits/(Pixel*Frame) : 0.133 Stream size : 17.8 MiB (88%) Writing library : Lavc52.115.0 Audio ID : 2 Format : AAC Format/Info : Advanced Audio Codec Format profile : LC Codec ID : 40 Duration : 2mn 28s Bit rate mode : Variable Bit rate : 128 Kbps Channel(s) : 2 channels Channel positions : Front: L R Sampling rate : 44.1 KHz Compression mode : Lossy Stream size : 2.26 MiB (11%)
WMF identifies the video as MFVideoFormat_M4S2, "MPEG-4 part 2" http://msdn.microsoft.com/en-us/library/windows/desktop/dd757766%28v=vs.85%29.aspx He whitelist codecs, and H.264 is the only codec we've whitelisted, so we're rejecting this file's video stream as having an unsupported codec. Chrome and IE can't play this file, so I don't see why we should. However Chrome/IE refuse to play the file entirely, whereas we still play the audio track. Maybe we should change to match Chrome/IE's behaviour and refuse to play a file which contains any unsupported streams...
Blocks: 799315
if we can support more, why not?we need to do better
(In reply to y-ii from comment #2) > if we can support more, why not?we need to do better If other browsers don't support the format, there's not much point in us supporting it, as websites relying on this format won't work in other browsers.
As per the discussion here: https://groups.google.com/forum/?fromgroups=#!topic/mozilla.dev.media/MwnP1YlJpYU I'll refuse to play videos which have an audio or video stream which fail to load in the WMFReader.
Abort playback of resource if the video or audio stream is unplayable.
Assignee: nobody → cpearce
Status: NEW → ASSIGNED
Attachment #712766 - Flags: review?(paul)
Chris, will your patch abort playback of h.264 video with unsupported AC3 audio codec (FF21 reads the video but not the audio) like http://www.auby.no/files/video_tests/h264_720p_hp_5.1_6mbps_ac3_planet.mp4 ?
Yes, the patch will make Firefox refuse to play files with unsupported audio. IE and Chrome have the same behaviour.
Attachment #712766 - Flags: review?(paul) → review+
Summary: H.264/AAC support: audio but no video → H.264/AAC support: abort playback of resource if the video or audio stream is unplayable
Depends on: 830171
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla21
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: