Bug 839055 - Refuse to play a video file with WMF which has corrupt or unplayable video or audio streams. r=padenot